fixed z-index issues for pan-zoom

--- a/app/assets/stylesheets/light-box.styl
+++ b/app/assets/stylesheets/light-box.styl
@@ -5,6 +5,7 @@
   width: 150px
   flex(shrink: 1)
   margin-left 10px
+  z-index 100
 
   // prevent highlighting/selecting
   -webkit-touch-callout none
