--- a/app/assets/stylesheets/subject-zoom-pan.styl
+++ b/app/assets/stylesheets/subject-zoom-pan.styl
@@ -1,12 +1,13 @@
 .subject-zoom-pan
   position:fixed
   left: 20px
-  top: 580px
+  bottom: 20px
   width: 130px
   height: 130px
-  background: rgba(0, 0, 0, 0.5)
+  background: rgba(0, 0, 0, 0.7)
   border: 2px solid #444444
   border-radius: 65px
+  z-index: 99
 
   &:before
     content: ' '
